--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,8 +1,12 @@
 
 <!doctype html>
+
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+<head>
+
+  {% load staticfiles %}  
+
+  <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
